--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -1,28 +1,30 @@
 <div class="container-fluid">
-    <div class="row text-center">
-        <div class="col-12">
-            <mat-form-field>
-                <mat-label>Email</mat-label>
-                <input matInput>
-            </mat-form-field>
+    <form #loginForm="ngForm" (ngSubmit)="onLogin(loginForm)" novalidate>
+        <div class="row text-center">
+            <div class="col-12">
+                <mat-form-field>
+                    <mat-label>Email</mat-label>
+                    <input matInput name="email" ngModel required #email="ngModel" />
+                </mat-form-field>
+            </div>
         </div>
-    </div>
-    <div class="row text-center">
-        <div class="col-12">
-            <mat-form-field>
-                <mat-label>Password</mat-label>
-                <input matInput>
-            </mat-form-field>
+        <div class="row text-center">
+            <div class="col-12">
+                <mat-form-field>
+                    <mat-label>Password</mat-label>
+                    <input matInput type="password" name="password" ngModel required #password="ngModel">
+                </mat-form-field>
+            </div>
         </div>
-    </div>
-    <div class="row text-center">
-        <div class="col-12">
-            <button mat-flat-button color="primary">Login</button>
+        <div class="row text-center">
+            <div class="col-12">
+                <button mat-flat-button color="primary" type="submit">Login</button>
+            </div>
         </div>
-    </div>
-    <div class="row text-center pt-1">
-        <div class="col-12">
-            <button mat-flat-button color="primary">Register</button>
+        <div class="row text-center pt-1">
+            <div class="col-12">
+                <button mat-flat-button color="primary" (click)="register()">Register</button>
+            </div>
         </div>
-    </div>
+    </form>
 </div>
