--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,7 @@
 body {
     font-family: Roboto, "Helvetica Neue", sans-serif;
     margin: 0;
-    padding: 30px;
+    /* padding: 30px; */
   }
   
   html, body {
